# pyxel-detector-simulation-framework

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  MANIFEST.in  README.md  README_MINI_FRAMEWORK.md  pyproject.toml  run.py  tox.ini
.gitlab/issue_templates/: submit_question.md
.gitlab/merge_request_templates/: merge_request_template.md
continuous_integration/: environment.yml  pyxel-2.10-environment.yaml  pyxel-2.11-environment.yaml  pyxel-2.11.1-environment.yaml  pyxel-2.11.2-environment.yaml  pyxel-2.12-environment.yaml  pyxel-2.13-environment.yaml  pyxel-2.14-environment.yaml  pyxel-2.9-environment.yaml
continuous_integration/scripts/: create_json_schema.py
docs/questions/: display_all_intermediate_models_run_mode.question.md  snr.question.md
docs/source/: index.rst
docs/source/about/: FAQ.md
docs/source/background/: channels.rst
docs/source/howto/: metadata.md
docs/source/references/: apireference.rst  contributing.rst
docs/source/tutorials/: examples.rst  get_help.rst  install.rst  overview.rst  running.rst
examples/: base.yaml  basic_imaging.yaml  config.yaml  ir_pipeline.yaml
mini_framework/: __init__.py  buckets.py  config.py  contract.py  contracts.py  detector.py  evaluator.py  model_function.py  model_group.py  outputs.py  pipeline.py  processor.py  registry.py  resolver.py  stage.py
mini_framework/models/: __init__.py  charge.py  data_processing.py  measurement.py  metrics.py  photon.py  readout.py  scene.py
pyxel/: __init__.py  run.py  show_versions.py
pyxel/backends/: hdf5.py
pyxel/calibration/: calibration.py  fitting.py  fitting_datatree.py
pyxel/configuration/: __init__.py  configuration.py
pyxel/data_structure/: __init__.py  array.py  charge.py  image.py  photon.py  pixel.py  pixel_read.py  scene.py  signal.py
pyxel/detectors/: __init__.py  channels.py  characteristics.py  charge_to_volt_settings.py  detector.py  environment.py  geometry.py
pyxel/detectors/apd/: __init__.py  apd.py  apd_characteristics.py  saphira_characteristics.py
pyxel/detectors/ccd/: ccd.py
pyxel/detectors/cmos/: cmos.py
pyxel/detectors/mkid/: mkid.py
pyxel/exposure/: exposure.py  readout.py
pyxel/gui/: __init__.py  basic_config_ui.py  run.py  simple_config.py
pyxel/gui/icons/: __init__.py
pyxel/gui/images/: __init__.py
pyxel/inputs/: loader.py
pyxel/models/: metadata.py  metadata.schema.json
pyxel/models/charge_collection/: __init__.py  collection.py  copy_to_pixel_read.py  fixed_pattern_noise.py  full_well.py  inter_pixel_capacitance.py  metadata.yaml  persistence.py
pyxel/models/charge_generation/: __init__.py  apd_gain.py  avalanche.py  metadata.yaml
pyxel/models/charge_measurement/: __init__.py  amplifier_crosstalk.py  measurement.py  metadata.yaml  output_node_noise_cmos.py  readout_noise.py  reset_noise.py
pyxel/models/charge_transfer/: cdm.py  emccd_poisson.py  emccd_poisson_cic.py  metadata.yaml
pyxel/models/data_processing/: __init__.py  mean_variance.py  metadata.yaml  remove_cosmic_rays.py  snr.py  source_extractor_model.py  statistics.py
pyxel/models/phasing/: metadata.yaml
pyxel/models/photon_collection/: __init__.py  ariel_airs.py  load_image.py  metadata.yaml  point_spread_function.py  simple_collection.py
pyxel/models/readout_electronics/: metadata.yaml  sar_adc_with_noise.py
pyxel/models/scene_generation/: load_star_map.py  metadata.yaml
pyxel/notebook/: __init__.py  html_representation.py  jupyxel.py
pyxel/observation/: observation.py  observation_dask.py
pyxel/outputs/: exposure_outputs.py  outputs.py  utils.py
pyxel/pipelines/: model_function.py  model_group.py  pipeline.py  processor.py
pyxel/static/: pyxel_schema.json
pyxel/util/: __init__.py  add_model.py  errors.py  image.py  metadata.py
tests/: test_mini_framework.py
tests/calibration/: test_calibration.py
tests/configuration/: conftest.py  test_add_comments.py  test_build_configuration.py  test_load.py  test_loads.py  test_save.py
tests/configuration/data/: calibration.yaml  exposure1.yaml  exposure2.yaml  observation_custom.yaml  observation_custom_parallel.yaml  observation_product.yaml  observation_sequential.yaml
tests/data/: calibrate_models.yaml  dummy_simple_deprecated.yaml  parametric.yaml  yaml.yaml
tests/data_structure/: test_pixel.py  test_with_units.py
tests/detectors/: test_apd_characteristics.py  test_ccd.py  test_ccd_geometry.py  test_channels.py  test_characteristics.py  test_cmos.py  test_cmos_geometry.py  test_detectors.py  test_environment.py  test_geometry.py  test_mkid.py  test_mkid_geometry.py
tests/functional_tests/: test_basic_exposure.py  test_multiple_run.py  test_no_outputs.py  test_with_channels.py
tests/functional_tests/config/: calibration.yaml  calibration_with_working_directory.yaml  exposure.yaml  exposure_with_working_directory.yaml  observation_bad_parameter.yaml  observation_custom.yaml  observation_custom_with_working_directory.yaml  observation_product.yaml  observation_product_with_working_directory.yaml  observation_sequential.yaml  observation_sequential_with_working_directory.yaml
tests/functional_tests/data/: basic_exposure.yaml  config_multiple_readout_destructive_2x2.yaml  config_multiple_readout_non_destructive_2x2.yaml  good_observation_custom.yaml  simple_exposure.yaml  simple_exposure_for_work_dir.yaml  simple_exposure_no_outputs.yaml  simple_observation.yaml  simple_observation_no_outputs.yaml
tests/inputs/: test_load_image_and_header.py  test_load_image_data_array.py
tests/models/charge_collection/: test_fixed_pattern_noise.py  test_persistence.py  test_simple_full_well.py  test_simple_ipc.py  test_simple_persistence.py
tests/models/charge_generation/: test_apd_gain.py  test_cosmix.py  test_dark_current_saphira.py
tests/models/charge_measurement/: test_amplifier_crosstalk.py  test_dc_crosstalk.py  test_nghxrg.py  test_non_linearity.py  (+4 more)
tests/pipelines/: test_model_group.py
tests/running_mode/: test_exposure.py
tests/unittests/: test_fitting.py
tests/use_cases/: multi_wavelength.yaml
tests/util/: test_metadata.py
(+40 files in other folders)
